--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <meta name="description" content="candle using css"/>
     <title>Candle</title>
     <link
       rel="stylesheet"
